@@ -1,3 +1,7 @@
+2008-08-22  Stelian Ionescu <sionescu@common-lisp.net>
+
+	* swank-listener-hooks.lisp: Add missing IN-PACKAGE.
+
 2008-08-20  Tobias C. Rittweiler  <tcr@freebits.de>
 
 	* slime-fontifying-fu.el: New contrib; fontify with-foo and do-foo
