@@ -1,3 +1,7 @@
+2008-08-22  Stelian Ionescu <sionescu@common-lisp.net>
+
+	* swank-ecl.lisp: Add a few EVAL-WHENs to fix compilation.
+
 2008-08-22  Helmut Eller  <heller@common-lisp.net>
 
 	Collect most of the inspector state in a structrure.
